# linXiv

./: .gitignore  AI_tools.py  CONTEXT(OLD).md  CONTEXT.md  DONE.md  README.md  TODO.md  build_migration_demo.py  config.py  index.html  linxiv-api.spec  linxiv-cli.spec  linxiv-mcp.spec  linxiv_cli.py  linxiv_mcp.py  main_shell.py  migrate_data.sql  migrate_db.py  package-lock.json  package.json  pdf.py  pyproject.toml  requirements.txt  search.py  tailwind.config.ts  user_settings.py  vite.config.ts
.github/workflows/: ci.yml  release.yml
api/: __init__.py  __main__.py  app.py  graph_payload.py  run_api.py
docs/adr/: 0001-app-shell-tab-navigation.md  0002-namespaced-source-id.md  0003-notes-in-paper-detail-tab.md  0004-configurable-sidebar.md  0005-search-persistence-via-local-db.md  0006-destructive-actions-behind-overflow-menu.md  0007-q-class-for-storage-queries.md  0008-repair-endpoint-scope.md  0009-orphan-row-policy.md  0010-service-layer-as-api-boundary.md  0011-search-result-out-pydantic-model.md  0012-graph-iframe-postmessage-protocol.md  0013-theme-state-model.md  0014-data-dir-single-source-of-truth.md
formats/: __init__.py  arxiv_paper.md  base.py  bibtex.py  csv_fmt.py  default_settings.json  json_fmt.py  markdown.py  styles.json
gui/: app.py  app_shell.py  main_window.py  shell.py  theme.py
gui/doi/: __init__.py  page.py
gui/graph/: __init__.py  _export_handler.py  page.py  view.py
gui/home/: __init__.py  page.py
gui/projects/: __init__.py  page.py
gui/qt_assets/: __init__.py  add_paper_dialog.py  color_config.py  export_import_buttons.py  note_card.py  paper_card.py  selection_bar.py  styles.py  trash_panel.py  workers.py
gui/search/: __init__.py  _widgets.py  _window.py  _workers.py
gui/settings/: __init__.py  page.py
gui/setup/: __init__.py  page.py
gui/views/: __init__.py  markdown_view.py  pdf_window.py  tex_view.py
public/graph/: graph.css  graph.html  graph.js
scripts/: stage_sidecar.py
service/: author.py  content.py  export_import.py  files.py  note.py  paper.py  project.py  tag.py
service/models/: author.py  content.py  note.py  paper.py  project.py  tag.py
sources/: __init__.py  arxiv_downloads.py  arxiv_source.py  base.py  crossref_source.py  doi_resolve.py  fetch_paper_metadata.py  openalex_source.py  pdf_metadata.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: integrations.rs  main.rs
src/api/: authors.ts  client.ts  exportImport.ts  integrations.ts  notes.ts  papers.ts  projects.ts  search.ts  searchState.ts  settings.ts  tags.ts  trash.ts
src/lib/: papers.ts  search.ts  theme.ts
src/pages/: AuthorPage.tsx  DoiPage.tsx  GraphPage.tsx  HomePage.tsx  LibraryPage.tsx  PaperDetailPage.tsx  PdfPreviewPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SearchPage.tsx  SettingsPage.tsx  TagPage.tsx
src/stores/: importJobs.ts  selection.ts  theme.ts  ui.ts
src/styles/: globals.css
src/types/: api.ts
storage/: __init__.py  authors.py  db.py  notes.py  paths.py  projects.py  search_history.py  search_state.py  tags.py
storage/config/: core.py  queries.py
storage/migrations/: migrate_data.sql  notes_add_project_fk.sql  papers_add_root_fk.sql  papers_v1.sql  (+4 more)
tests/: build_migration_demo.py  conftest.py  test_api.py  test_arxiv_downloads.py  test_bibtex.py  test_cli.py  test_crossref_source.py  test_csv_fmt.py  test_db.py  test_doi_resolve.py  test_export_import.py  test_fetch_paper_metadata.py  test_json_fmt.py  test_markdown_fmt.py  test_migration.py  test_non_arxiv.py  test_notes.py  test_paper_import_dedupe.py  test_paper_soft_delete.py  test_pdf_metadata.py  test_projects.py  test_sources.py
(+60 files in other folders)
