[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linxiv"
version = "0.1.0"
description = "Discover, manage, and visualize academic papers from arXiv"
requires-python = ">=3.10"
dependencies = [
    "arxiv",
    "fastapi",
    "google-genai",
    "httpx",
    "markdown",
    "openai",
    "pydantic",
    "pybtex",
    "python-dotenv",
    "uvicorn[standard]",
    "pypdf>=6.10.2",
]

[project.optional-dependencies]
gui = ["PyQt6", "PyQt6-WebEngine"]
mcp = ["mcp[cli]"]

[project.scripts]
linxiv = "linxiv_cli:main"
linxiv-mcp = "linxiv_mcp:main"
linxiv-gui = "main_shell:main"
[tool.hatch.build.targets.wheel]
include = [
    "linxiv_cli.py",
    "linxiv_mcp.py",
    "main_shell.py",
    "pdf.py",
    "search.py",
    "AI_tools.py",
    "api",
    "formats",
    "gui",
    "sources",
    "storage",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
