[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linxiv"
version = "0.1.0"
description = "Discover, manage, and visualize academic papers from arXiv"
requires-python = ">=3.10"
dependencies = [
    "arxiv",
    "fastapi",
    "google-genai",
    "httpx",
    "markdown",
    "openai",
    "pydantic>=2.0,<2.13",
    "pybtex",
    "python-dotenv",
    "uvicorn[standard]",
    "pypdf>=6.10.2",
    "starlette<1.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]"]

[project.scripts]
linxiv = "linxiv_cli:main"
linxiv-mcp = "linxiv_mcp:main"
linxiv-gui = "main_shell:main"
linxiv-migrate = "migrate_db:main"
[tool.hatch.build.targets.wheel]
include = [
    "linxiv_cli.py",
    "linxiv_mcp.py",
    "main_shell.py",
    "migrate_db.py",
    "pdf.py",
    "search.py",
    "AI_tools.py",
    "api",
    "formats",
    "gui",
    "sources",
    "storage",
]

[dependency-groups]
dev = [
    "pluggy>=1.6",
    "pytest>=8.3,<9",
]
gui = [
    "PyQt6",
    "PyQt6-WebEngine",
]

[tool.uv]
default-groups = ["dev", "gui"]
