[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linxiv"
version = "0.1.0"
description = "Discover, manage, and visualize academic papers from arXiv"
requires-python = ">=3.10"
dependencies = [
    "arxiv",
    "fastapi",
    "google-genai",
    "httpx",
    "openai",
    "pydantic>=2.0,<2.13",
    "pybtex",
    "python-dotenv",
    "uvicorn[standard]",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
mcp = ["mcp[cli]"]

[project.scripts]
linxiv = "linxiv_cli:main"
linxiv-mcp = "linxiv_mcp:main"
linxiv-migrate = "migrate_db:main"
[tool.hatch.build.targets.wheel]
include = [
    "linxiv_cli.py",
    "linxiv_mcp.py",
    "migrate_db.py",
    "AI_tools.py",
    "config.py",
    "user_settings.py",
    "api",
    "formats",
    "service",
    "sources",
    "storage",
]

[dependency-groups]
dev = [
    "pluggy>=1.6",
    "pytest>=8.3,<9",
]

[tool.uv]
default-groups = ["dev"]
